Fix border-radius of inputs/container and delete double border

--- a/devias-web/src/Components/ContactForm/ContactForm.scss
+++ b/devias-web/src/Components/ContactForm/ContactForm.scss
@@ -1,9 +1,6 @@
 .contact-form {
   width: 500px;
   height: 500px;
-  border: 10px solid #fff;
-  border-radius: 20px;
-  box-shadow: 0px 2px 15px 5px rgba(106, 106, 106, 0.25);
 
   &.form-home{
     margin: 2rem auto;
@@ -18,7 +15,7 @@
     align-items: center;
     gap: 20px;
     background-color: #fff;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 0px 6px 16px rgba(106, 106, 106, 0.25);
 
     .contact-title {
@@ -54,7 +51,7 @@
 
         input {
           border: none;
-          border-radius: 20px;
+          border-radius: 5px;
           width: 100%;
           height: 3em;
           color: #333;
@@ -94,7 +91,7 @@
 
       textarea {
         border: none;
-        border-radius: 20px;
+        border-radius: 5px;
         height: 5em;
         color: #333;
         background-color: rgba(0, 60, 123, 0.0901960784);
@@ -125,7 +122,7 @@
         color: #FFF;
         background-color: #598392;
         border: none;
-        border-radius: 20px;
+        border-radius: 5px;
         cursor: pointer;
 
         &:hover {
